@@ -1,5 +1,7 @@
 package ru.yandex.practicum.filmorate.service;
 
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
@@ -7,19 +9,17 @@ import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class UserService {
 
     private final UserStorage userStorage;
 
-    private final Map<Long, Set<Long>> friends = new ConcurrentHashMap<>();
-
+    @Autowired
     public UserService(UserStorage userStorage) {
         this.userStorage = userStorage;
     }
@@ -30,11 +30,7 @@ public class UserService {
 
     public User create(User user) {
         validate(user);
-
-        if (user.getName() == null || user.getName().isBlank()) {
-            user.setName(user.getLogin());
-        }
-
+        setDefaultName(user);
         return userStorage.create(user);
     }
 
@@ -42,15 +38,11 @@ public class UserService {
         validate(user);
 
         if (user.getId() == null) {
-            throw new ValidationException("Id must not be null");
+            throw new ValidationException("Id должен быть указан");
         }
 
         getById(user.getId());
-
-        if (user.getName() == null || user.getName().isBlank()) {
-            user.setName(user.getLogin());
-        }
-
+        setDefaultName(user);
         return userStorage.update(user);
     }
 
@@ -62,51 +54,45 @@ public class UserService {
     public void addFriend(Long userId, Long friendId) {
         getById(userId);
         getById(friendId);
-
-        friends.computeIfAbsent(userId,
-                key -> ConcurrentHashMap.newKeySet()).add(friendId);
-
-        friends.computeIfAbsent(friendId,
-                key -> ConcurrentHashMap.newKeySet()).add(userId);
+        userStorage.addFriend(userId, friendId);
+        userStorage.addFriend(friendId, userId);
+        log.debug("Пользователи id={} и id={} добавлены в друзья", userId, friendId);
     }
 
     public void removeFriend(Long userId, Long friendId) {
         getById(userId);
         getById(friendId);
-
-        Set<Long> userFriends = friends.get(userId);
-
-        if (userFriends != null) {
-            userFriends.remove(friendId);
-        }
-
-        Set<Long> friendFriends = friends.get(friendId);
-
-        if (friendFriends != null) {
-            friendFriends.remove(userId);
-        }
+        userStorage.removeFriend(userId, friendId);
+        userStorage.removeFriend(friendId, userId);
+        log.debug("Пользователи id={} и id={} удалены из друзей", userId, friendId);
     }
 
     public List<User> getFriends(Long userId) {
         getById(userId);
 
-        return friends.getOrDefault(userId, Set.of())
-                .stream()
+        return userStorage.getFriendIds(userId).stream()
                 .map(this::getById)
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(User::getId))
+                .toList();
     }
 
     public List<User> getCommonFriends(Long userId, Long otherUserId) {
         getById(userId);
         getById(otherUserId);
 
-        Set<Long> firstFriends = friends.getOrDefault(userId, Set.of());
-        Set<Long> secondFriends = friends.getOrDefault(otherUserId, Set.of());
+        Set<Long> commonFriendIds = userStorage.getFriendIds(userId);
+        commonFriendIds.retainAll(userStorage.getFriendIds(otherUserId));
 
-        return firstFriends.stream()
-                .filter(secondFriends::contains)
+        return commonFriendIds.stream()
                 .map(this::getById)
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(User::getId))
+                .toList();
+    }
+
+    private void setDefaultName(User user) {
+        if (user.getName() == null || user.getName().isBlank()) {
+            user.setName(user.getLogin());
+        }
     }
 
     private void validate(User user) {
@@ -114,20 +100,17 @@ public class UserService {
             throw new ValidationException("Пользователь не может быть null");
         }
 
-        if (user.getEmail() == null
-                || user.getEmail().isBlank()
-                || !user.getEmail().contains("@")) {
+        if (user.getEmail() == null || user.getEmail().isBlank() || !user.getEmail().contains("@")) {
             throw new ValidationException("Некорректный email");
         }
 
         if (user.getLogin() == null
                 || user.getLogin().isBlank()
-                || user.getLogin().contains(" ")) {
-            throw new ValidationException("Некорректный login");
+                || user.getLogin().chars().anyMatch(Character::isWhitespace)) {
+            throw new ValidationException("Некорректный логин");
         }
 
-        if (user.getBirthday() != null
-                && user.getBirthday().isAfter(LocalDate.now())) {
+        if (user.getBirthday() != null && user.getBirthday().isAfter(LocalDate.now())) {
             throw new ValidationException("Дата рождения не может быть в будущем");
         }
     }
